--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drone2</title>
-  <script defer src="app.js"></script>
 </head>
 <body>
   <h1>Drone2 - Mobile Camera Streaming</h1>
   <video id="localVideo" autoplay muted playsinline></video>
   <video id="remoteVideo" autoplay playsinline></video>
+
+  <!-- <script defer src="app.js"></script> -->
+  <script src="/socket.io/socket.io.js"></script>
+  <!-- Include your application code -->
+  <script src="app.js"></script>
 </body>
 </html>
