--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Drone2 - Mobile Camera Streaming</h1>
-  <video id="localVideo" autoplay muted playsinline></video>
+  <!-- <video id="localVideo" autoplay muted playsinline></video> -->
   <video id="remoteVideo" autoplay playsinline></video>
 
   <!-- <script defer src="app.js"></script> -->
