--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drone2</title>
+  <title>View Mobile Camera</title>
+  <style>
+    video {
+        width: 100%;
+        max-width: 600px;
+    }
+</style>
 </head>
 <body>
-  <h1>Drone2 - Mobile Camera Streaming</h1>
-  <!-- <video id="localVideo" autoplay muted playsinline></video> -->
-  <video id="remoteVideo" autoplay playsinline></video>
-
-  <!-- <script defer src="app.js"></script> -->
+  <h1>Remote Camera Feed</h1>
+  <video id="remoteVideo" autoplay></video>
   <script src="/socket.io/socket.io.js"></script>
-  <!-- Include your application code -->
   <script src="app.js"></script>
 </body>
 </html>
