--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>View Mobile Camera</title>
-  <style>
-    video {
-        width: 100%;
-        max-width: 600px;
-    }
-</style>
+  <title>Camera Streaming</title>
 </head>
 <body>
-  <h1>Remote Camera Feed</h1>
+  <h1>Camera Streaming</h1>
+  <video id="localVideo" autoplay muted style="display: none;"></video>
   <video id="remoteVideo" autoplay></video>
   <script src="/socket.io/socket.io.js"></script>
   <script src="app.js"></script>
